--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,209 +1,264 @@
 lessons:
- - case:    "Project"
-   week:    ""
-   date:    ""
-   title:   "Individual project"
+ - week:    "Week 01"
+   date:    "Mon., Aug. 23"
+   title:   "Meet the Toolkit"
+   lab:    "../project/individual.html"
+   
+   
+ - date:    "Wed., Aug. 25"
+   title:   "Populations and Samples"
    slides:  "../project/individual.html"
-
- - case:    "Case 0"
-   week:    ""
-   date:    ""
-   title:   "Stop-question-frisk"
-   slides:  "../project/case-00.html"
-
- - week:    "00"
-   date:    "Thu, Jan 21"
-   title:   "Data science ethics"
-   slides:  "integrity.html"
- - date:    "Fri, Jan 22"
-   title:   "Lab"
-
- - week:    "01"
-   date:    "Tue, Jan 26"
-   title:   "How to write a model"
-   slides:  "writing-models.html"
- - date:    "Thu, Jan 28"
-   title:   "Data visualization"
-   slides:  "data-vis.html"
- - date:    "Fri, Jan 29"
-   title:   "Lab"
- - date:    "Sun, Jan 31"
-   due:     "Case 0 write-up"
    
- - case:    "Case 1"
-   week:    ""
-   date:    ""
-   title:   "Opioid abuse relapse"
-   slides:  "../project/case-01.html"
+ - date:    "Fri., Aug. 27"
+   title:   "Data Visualization"
+   slides:  "../project/individual.html"
+ 
+ - week:    "Week 02"
+   date:    "Mon., Aug. 30"
+   title:   "Data Visualization"
+   lab:    "../project/individual.html"
    
- - week:    "02"
-   date:    "Tue, Feb 02"
-   title:   "Survival analysis (1/2)"
-   slides:  "survival.html"
- - date:    ""
-   title:   "Drop/Add ends"
- - date:    "Thu, Feb 04"
-   title:   "Survival analysis (2/2)"
-   slides:  "survival-2.html"
-   due:     "Case 0 peer review"
- - date:    "Fri, Feb 05"
-   title:   "Lab"
-   lab:     ""
+ - date:    "Wed., Sept. 1"
+   title:   "Data Visualization"
+   slides:  "../project/individual.html"
    
+ - title:   "Lab 1 Due"
+   due:     " "
+ 
+ - date:    "Fri., Sept. 3"
+   title:   "Probability and Sampling"
+   slides:  "../project/individual.html"
+   hw:    "../project/individual.html"
+
  - week:    "03"
-   date:    "Tue, Feb 09"
-   title:   "Clinical trials"
-   slides:  "trials.html"
-   due:     "Project proposal"
- - date:    "Thu, Feb 11"
-   title:   "Case study work day"
-   slides:  ""
- - date:    "Fri, Feb 12"
-   title:   "Lab"
-   lab:     ""
- - date:    "Sun, Feb 14"
-   due:     "Case 1 write-up"
+   date:    "Mon., Sept. 6"
+   title:   "Probability"
+   lab:    "../project/individual.html"
+
+ - date:    "Wed., Sept. 8"
+   title:   "Bayes Rule and Diagnostic Testing"
+   slides:  "../project/individual.html"
+   
+ - title:   "Lab 2 Due"
+   due:     " "
+   
+ - date:    "Fri., Sept. 10"
+   title:   "Discrete Distributions"
+   slides:  "../project/individual.html"
+   hw:    "../project/individual.html"
+   
+ - title:   "HW 1 Due"   
+   due:     " "
    
  - week:    "04"
-   date:    "Tue, Feb 16"
-   title:   "Writing and responding to reviews"
-   slides:  "peer-review.html"
- - date:    "Thu, Feb 18"
-   title:   "Writing a statistical analysis plan"
-   slides:  "writing-saps.html"
- - date:    "Fri, Feb 19"
-   title:   "Lab"
-   lab:     ""
+   date:    "Mon., Sept. 13"
+   title:   "Categorical Data"
+   lab:    "../project/individual.html"
 
- - case:    "Case 2"
-   week:    ""
-   date:    ""
-   title:   "MLB batting averages"
-   slides:  "../project/case-02.html"
-
- - week:    "05"
-   date:    "Tue, Feb 23"
-   title:   "Estimation in linear models (1/2)"
-   slides:  "glm-1.html"
-   due:     "Case 1 peer review"
- - date:    "Thu, Feb 25"
-   title:   "Estimation in linear models (2/2)"
-   slides:  "glm-2.html"
- - date:    "Fri, Feb 26"
-   title:   "Lab"
-   lab:     ""
- - date:    "Sun, Feb 28"
-   due:     "Case 1 response/revision"
+ - date:    "Wed., Sept. 15"
+   title:   "Data Wrangling"
+   slides:  "../project/individual.html"
    
- - week:    "06"
-   date:    "Tue, Mar 02"
-   title:   "The EM Algorithm (1/2)"
-   slides:  "em.html"
-   due:     "Project intro/data/EDA"
- - date:    "Thu, Mar 04"
-   title:   "The EM Algorithm (2/2)"
-   slides:  "em.html"
- - date:    "Fri, Mar 05"
-   title:   "Lab"
-   lab:     ""
+ - title:   "Lab 3 Due"
+   due:     " "
 
- - week:    "07"
-   date:    "Tue, Mar 09"
-   title:   "No classes held"
-   slides:  ""
- - date:    "Thu, Mar 11"
-   title:   "Case study work day"
-   slides:  ""
- - date:    "Fri, Mar 12"
-   title:   "Lab"
-   lab:     ""
- - date:    "Sun, Mar 14"
-   due:     "Case 2 write-up"
+ - date:    "Fri., Sept. 17"
+   title:   "Spatial Data"
+   slides:  "../project/individual.html"
+   hw:    "../project/individual.html"
+   
+ - title:   "Projects Assigned"   
+   project: "../project/individual.html"
+   
+ - title:   "HW 2 Due"
+   due:   "HW 2"
+   
+ - week:    "05"
+   date:    "Mon., Sept. 20"
+   title:   "Data Wrangling"
+   lab:    "../project/individual.html"
+
+ - date:    "Wed., Sept. 22"
+   title:   "Case Study"
+   slides:  "../project/individual.html"
+
+ - title:   "Lab 4 Due"
+   due:     " "
+   
+ - date:    "Fri., Sept. 24"
+   title:   "Exam 1"
+   exam:    "../project/individual.html"
  
- - week:    "08"
-   date:    "Tue, Mar 16"
-   title:   "Model selection"
-   slides:  "model-selection.html"
- - date:    "Thu, Mar 18"
-   title:   "Spatial data and regression (1/2)"
-   slides:  "spatial-1.html"
-   due:     "Case 2 peer review"
- - date:    "Fri, Mar 19"
-   title:   "Lab"
-   lab:     ""
+ - week:    "06"
+   date:    "Mon., Sept. 27"
+   title:   "Exams Returned"
+   lab:    "../project/individual.html"
 
- - case:    "Case 3"
-   week:    ""
-   date:    ""
-   title:   "Stop-question-frisk revisited"
-   slides:  "../project/case-03.html"
+ - date:    "Wed., Sept. 29"
+   title:   "Normal Distribution"
+   slides:  "../project/individual.html"
+   
+ - date:    "Fri., Oct. 1"
+   title:   "Hypothesis Testing"
+   slides:  "../project/individual.html"
+   hw:      "../project/individual.html"
+  
+ - week:    "07"
+   date:    "Wednesday, Oct. 6"
+   title:   "Confidence Intervals"
+   slides:  "../project/individual.html"
+
+ - date:    "Friday, Oct. 8"
+   title:   "Comparing Means; ANOVA"
+   slides:  "../project/individual.html"
+   hw:      "../project/individual.html"
+
+ - title:   "Project Proposal Due"
+   due:     " "
+
+ - title:   "HW 3 Due"
+   due:     " "
+
+ - week:    "08"
+   date:    "Monday, Oct. 11"
+   title:   "Comparing Continuous Variables"
+   lab:     "../project/individual.html"
+
+ - date:    "Wednesday, Oct. 13"
+   title:   "Correlation and Linear Regression"
+   slides:  "../project/individual.html"
+
+ - title:   "Lab 5 Due"
+   due:     " "
+
+ - date:    "Friday, Oct. 15"
+   title:   "Multiple Regression; ANCOVA"
+   slides:  "../project/individual.html"
+   hw:      "../project/individual.html"
+ 
+ - title:   "HW 4 Due"
+   due:     " "
 
  - week:    "09"
-   date:    "Tue, Mar 23"
-   title:   "Spatial data and regression (2/2)"
-   slides:  "spatial-2.html"
-   due:     "Case 2 response/revision"
- - date:    "Wed, Mar 24"
-   title:   "Last day to withdraw with W grade"
- - date:    "Thu, Mar 25"
-   title:   "Case study work day"
-   slides:  ""
-   due:     "Project methods/SAP"
- - date:    "Fri, Mar 26"
-   title:   "Lab"
-   lab:     ""
- - date:    "Sun, Mar 28"
-   due:     "Case 3 write-up"
-   
+   date:    "Monday, Oct. 18"
+   title:   "Regression"
+   lab:     "../project/individual.html"
+
+ - date:    "Wednesday, Oct. 20"
+   title:   "Regression"
+   slides:  "../project/individual.html"
+ 
+ 
+ - title:   "Lab 6 Due"
+   due:     " "
+
+ - date:    "Friday, Oct. 22"
+   title:   "Comparing Categorical Variables"
+   slides:  "../project/individual.html"
+
+ - title:   "HW 5 Due"
+   due:     " "
+ 
  - week:    "10"
-   date:    "Tue, Mar 30"
-   title:   "Careers in statistical science"
-   slides:  ""
- - date:    "Thu, Apr 01"
-   title:   "Project work day"
-   slides:  ""
-   due:     "Case 3 peer review"
- - date:    "Fri, Apr 02"
-   title:   "Lab"
-   lab:     ""
- - date:    "Sun, Apr 04"
-   due:     "Project preliminary results"
+   date:    "Monday, Oct. 25"
+   title:   "Shiny!"
+   lab:     "../project/individual.html"
+
+ - date:    "Wednesday, Oct. 27"
+   title:   "Binary Classification; k-means"
+   slides:  "../project/individual.html"
+   
+ - title:   "Lab 7 Due"
+   due:     " "
+
+ - date:    "Friday, Oct. 29"
+   title:   "Exam 2"
+   exam:    "../project/individual.html"
    
  - week:    "11"
-   date:    "Tue, Apr 06"
-   title:   "Project presentations"
-   slides:  ""
-   due:     "Case 3 response/revision"
- - date:    "Thu, Apr 08"
-   title:   "Project presentations"
-   slides:  ""
- - date:    "Fri, Apr 09"
-   title:   "Lab: project presentations"
-   lab:     ""
+   date:    "Monday, Nov. 1"
+   title:   "Exams Returned"
+   lab:    "../project/individual.html"
+   
+ - date:    "Wednesday, Nov. 3"
+   title:   "Logistic Regression"
+   slides:  "../project/individual.html"
+
+ - date:    "Friday, Nov. 5"
+   title:   "Logistic Regression; Draft Report Due"
+   slides:  "../project/individual.html"
+   hw:      "../project/individual.html"
+
+ - title:   "Draft Report Due"
+   project: "../project/individual.html"
+   due:     "Draft"
    
  - week:    "12"
-   date:    "Tue, Apr 13"
-   title:   "Project presentations"
-   slides:  ""
- - date:    "Thu, Apr 15"
-   title:   "Project presentations"
-   slides:  ""
- - date:    "Fri, Apr 16"
-   title:   "Lab: project presentations"
-   lab:     ""
+   date:    "Monday, Nov. 8"
+   title:   "Logistic Regression; Table 1"
+   lab:     "../project/individual.html"
+
+ - date:    "Wednesday, Nov. 10"
+   title:   "Survival Analysis"
+   slides:  "../project/individual.html"
+ 
+ - title:   "Lab 8 Due"
+   due:     " " 
+
+ - date:    "Friday, Nov. 12"
+   title:   "Global Health Data Science in Ation"
+   slides:  "../project/individual.html"
+   hw:      "../project/individual.html"
+
+ - title:   "HW 6 Due"
+   due:     " "
    
- - week:    "13"
-   date:    "Tue, Apr 20"
-   title:   "Project presentations"
-   slides:  ""
- - date:    "Thu, Apr 22"
-   title:   "Project presentations"
-   slides:  ""
- - date:    "Fri, Apr 23"
-   title:   "Lab: project presentations"
-   due:     "Project peer review"
+ - week:     "13"
+   date:    "Monday, Nov. 15"
+   title:   "Survival Analysis"
+   lab:     "../project/individual.html"
+
+ - date:     "Wednesday, November 17"
+   title:   "Ethics in Health Data Science"
+   slides:  "../project/individual.html"
    
- - week:    ""
-   date:    "Sat, May 01"
-   due:     "Project (final report)"
+ - title:   "Lab 9 Due"
+   due:     " "
+
+ - date:     "Friday, Nov. 19"
+   title:   "Correlated Data"
+   slides:  "../project/individual.html"
+   hw:      "../project/individual.html"
    
+ - title:   "HW 7 Due"
+   due:     " "
+
+
+ - week:     "14"
+   date:    "Monday, Nov. 21"
+   title:   "Project Presentations"
+   project: "../project/individual.html"
+
+ - week:     "15"
+   date:    "Monday, Nov. 29"
+   title:   "Project Presentations"
+   project:  "../project/individual.html"
+
+ - date:     "Wednesday, Dec. 1"
+   title:   "Correlated Data"
+   slides:  "../project/individual.html"
+   
+ - title:   "Project Written Submissions Due"
+   due:     " "
+
+ - date:     "Friday, Dec. 3"
+   title:   "Review"
+   slides:  "../project/individual.html"
+   
+ - title:   "HW 8 Due"
+   due:     "HW 8"
+
+ - week:     "16"
+   date:    "Wednesday, Dec. 8"
+   title:   "Final Exam"
+   exam:    "../project/individual.html"
